# fastapi-mcp-server

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  config.py  dependencies.py  main.py  mcp_handler.py  pyproject.toml  server.py
auth/: __init__.py  credential.py  session.py
database/: __init__.py  db.py
models/: __init__.py  session.py
routes/: __init__.py  mcp.py  session.py
services/: __init__.py  session.py
tools/: __init__.py  session.py
transport/: __init__.py  sse.py  types.py
utils/: __init__.py  api_utils.py
